[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/textures/ui/icons/messages.png" type="Texture" id=1]
[ext_resource path="res://assets/sound/login_success.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/textures/ui/icons/web.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/ui/background.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/ui/taskbar/taskbar_small.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/ui/taskbar/os_icon_small.png" type="Texture" id=6]
[ext_resource path="res://assets/textures/ui/cursor.png" type="Texture" id=7]
[ext_resource path="res://assets/textures/ui/icons/files.png" type="Texture" id=8]
[ext_resource path="res://src/Cursor.gd" type="Script" id=9]
[ext_resource path="res://src/Desktop/Desktop.gd" type="Script" id=10]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Background"]
margin_left = 3.0
margin_top = 3.0
margin_right = 62.0
margin_bottom = 55.0
custom_constants/vseparation = 2
custom_constants/hseparation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureButton" parent="Background/GridContainer"]
margin_right = 6.0
margin_bottom = 6.0
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 3 )

[node name="Icon2" type="TextureButton" parent="Background/GridContainer"]
margin_top = 8.0
margin_right = 6.0
margin_bottom = 14.0
texture_normal = ExtResource( 1 )

[node name="Icon3" type="TextureButton" parent="Background/GridContainer"]
margin_top = 16.0
margin_right = 6.0
margin_bottom = 22.0
texture_normal = ExtResource( 8 )

[node name="Taskbar" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -6.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="os_button" type="TextureButton" parent="Taskbar"]
margin_left = 2.02341
margin_top = 1.97085
margin_right = 4.02341
margin_bottom = 3.97085
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Taskbar"]
margin_left = 7.0
margin_top = 1.0
margin_right = 63.0
margin_bottom = 5.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Windows" type="CanvasLayer" parent="."]

[node name="Cursor" type="CanvasLayer" parent="."]
layer = 2

[node name="Cursor" type="TextureRect" parent="Cursor"]
margin_left = 20.9884
margin_top = 14.9962
margin_right = 23.9884
margin_bottom = 17.9962
mouse_filter = 2
texture = ExtResource( 7 )
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[connection signal="pressed" from="Background/GridContainer/Icon" to="." method="open_web"]
[connection signal="pressed" from="Background/GridContainer/Icon2" to="." method="open_messages"]
[connection signal="pressed" from="Background/GridContainer/Icon3" to="." method="open_files"]
